added some directories

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<title>Abstractor</title>
 </head>
 <body>
+
+	<script type="text/javascript">
+        window.onload = function(){
+            new AbstractorApp();
+        }
+    </script>
+
 	<div class="mode" id="view">View</div>
 	<div class="mode" id="edit">Edit</div>
 </body>
