changed index.html directory stuff

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<link href="css-reset.css" rel="stylesheet" type="text/css">
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="css/css-reset.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<title>Abstractor</title>
 </head>
 <body>
@@ -17,9 +17,9 @@
 	<div class="mode" id="view">View</div>
 	<div class="mode" id="edit">Edit</div>
 </body>
-<script type="text/javascript" src="jquery.js"></script>
-<script type="text/javascript" src="jquery-ui.js"></script>
-<script type="text/javascript" src="scripts.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery-ui.js"></script>
+<script type="text/javascript" src="js/scripts.js"></script>
 </html>
 
 
