--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     </script>
 
 	<div class="mode" id="view">View</div>
-	<div class="mode" id="edit">Edit</div>
+	<div class="mode" id="edit">Edit
+		<form>
+			<textarea rows="10" cols="30" id="editArea"></textarea>
+		</form>
+	</div>
+
+
+
+
 </body>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery-ui.js"></script>
