--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<div class="mode" id="view">View</div>
 	<div class="mode" id="edit">Edit
 		<form>
-			<textarea rows="10" cols="30" id="editArea"></textarea>
+			<textarea rows="10" cols="50" id="editArea"></textarea>
+			<div id="submit">Submit</div>
 		</form>
 	</div>
 
