database is now working woohoo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<div class="mode" id="edit">Edit
 		<form>
 			<textarea rows="10" cols="50" id="editArea"></textarea>
-			<div id="submit">Submit</div>
+			<button class="button" id="submit">Submit</button>
+			<button class="button" id="delete">Delete</button>
 		</form>
 	</div>
 
@@ -28,7 +29,8 @@
 </body>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery-ui.js"></script>
-<script type="text/javascript" src="js/scripts.js"></script>
+<script type="text/javascript" src="js/EditMode.js"></script>
+<script type="text/javascript" src="js/AbstractorApp.js"></script>
 </html>
 
 
