actually adding the altered style and index files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
    <!--  <canvas id="myCanvas" style="display:block; margin-left: auto; margin-right: auto;"></canvas>
  -->
- 	<div id="blah">Hihihi</div>
+ 	<button id="create_box">Create Box</button>
 
 	<article id="content"><p>Abstractor is a web app written in JavaScript that facilitates the explanation of multi-layered concepts and objects.</p></article>
 	<aside id="menu"><p>Menu</p></aside> 
@@ -41,8 +41,9 @@
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery-ui.js"></script>
 <script type="text/javascript" src="js/kinetic-v4.3.1.js"></script>
-<script type="text/javascript" src="js/stage.js"></script>
+<script type="text/javascript" src="js/Trees.js"></script>
 <script type="text/javascript" src="js/EditMode.js"></script>
+<script type="text/javascript" src="js/VisualBox.js"></script>
 <script type="text/javascript" src="js/AbstractorApp.js"></script>
 </html>
 
