--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <script type="text/javascript" src="js/Trees.js"></script>
 <script type="text/javascript" src="js/EditMode.js"></script>
 <script type="text/javascript" src="js/VisualBox.js"></script>
+<script type="text/javascript" src="js/Interface.js"></script>
 <script type="text/javascript" src="js/AbstractorApp.js"></script>
 </html>
 
