will this work nowwwww

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	
 	<div id="canvas"></div>
+	
 
 	<div class="modes" id="splash">
 
@@ -19,7 +20,8 @@
  	</div>
 
  	<div class="modes" id="edit">
- 		<article id="content"><p>Edit mode</p></article>
+ 		<article id="base"></article>
+
  	</div>
 
  	<div class="modes" id="view">
