--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="icons/favicon.ico" >
 	<link href="css/css-reset.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 
@@ -12,7 +13,7 @@
 
 	
 	<div id="canvas"></div>
-	
+
 
 	<div class="modes" id="splash">
 
