jsPlumb things, changes to side bar icons, miscellaneous trivial changes from last last week's hack session

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<div class="modes" id="splash">
 
  		<article id="content"><p>Abstractor is a web app written in JavaScript that facilitates the explanation of multi-layered concepts and objects.</p></article>
+
  	</div>
 
  	<div class="modes" id="edit">
@@ -57,30 +58,30 @@
 			<hr>
 			<ul>
 				<li id="new_box">
-					<img src="icons/new_box.png">
+					<img id="new_box_img" src="icons/new_box.png">
 					<span class="menu_text">New Box</span>
 				</li>
 				<li id="new_aside">
-					<img src="icons/ribbon_tail.png">
+					<img id="new_aside_img" src="icons/ribbon_tail.png">
 					<span class="menu_text">Extend</span>
 				</li>
 				<li id="edit_text">
-					<img src="icons/T_sidemenu.png">
+					<img id="edit_text_img" src="icons/T_sidemenu.png">
 					<span class="menu_text">Edit Text</span>
 				</li>
 				<li id="new_link">
-					<img src="icons/connect.png">
+					<img id="new_link_img" src="icons/connect.png">
 					<span class="menu_text">Connect</span>
 				</li>
 
 				<hr>
 
 				<li id="get_link">
-					<img src="icons/get_link.png">
+					<img id="get_link_img" src="icons/get_link.png">
 					<span class="menu_text">Get Link</span>
 				</li>
 				<li id="expand_all">
-					<img src="icons/expand_all.png">
+					<img id="expand_all_img" src="icons/expand_all.png">
 					<span class="menu_text">Expand All</span>
 				</li>
 			</ul>
@@ -105,6 +106,7 @@
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery-ui.js"></script>
 <!-- <script type="text/javascript" src="js/kinetic-v4.3.1.js"></script> -->
+<script type="text/javascript" src="js/raphael.js"></script>
 <script type="text/javascript" src="js/Trees.js"></script>
 <script type="text/javascript" src="js/EditMode.js"></script>
 <script type="text/javascript" src="js/VisualBox.js"></script>
