jsPlumb with 2 divs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
 
 
-
+    <div id="container0" class="rectangle"><span id="c0">Lalalal</span></div>
+	<div id="container1" class="rectangle"><span id="c1">huehuehuehuehue</span></div>
 
  	
 
@@ -111,6 +112,7 @@
 <script type="text/javascript" src="js/EditMode.js"></script>
 <script type="text/javascript" src="js/VisualBox.js"></script>
 <script type="text/javascript" src="js/Interface.js"></script>
+<script type="text/javascript" src="js/jsPlumb.js"></script>
 <script type="text/javascript" src="js/AbstractorApp.js"></script>
 </html>
 
