working jsplumb for 2 rectangles (click to add connection, double click to remove). still need to add generalized functionality to newly created boxes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	<title>Abstractor</title>
+
 </head>
 <body>
 
@@ -40,11 +41,15 @@
     </script>
 
 
+   <div id="container0" class="rectangle"><span id="c0">Lalalala</span></div>
+   <div id="container1" class="rectangle"><span id="c1">huehuehuehuehue</span></div>
 
-
-    <div id="container0" class="rectangle"><span id="c0">Lalalal</span></div>
+<!--
+   <div contenteditable="true" id="container0" class="rectangle"><span id="c0">Lalalal</span></div>
 	<div id="container1" class="rectangle"><span id="c1">huehuehuehuehue</span></div>
+-->
 
+   <!--<button onclick="ToggleEditable (this);">Deny to edit!</button>-->
  	
 
 
